gitops/apps/sveltos/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sveltos
  annotations:
    cert-manager.io/cluster-issuer: bealv-mgmt
  labels:
    probe: enabled
spec:
  rules:
    - host: 'sveltos.bealv-mgmt.lan'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - 'sveltos.bealv-mgmt.lan'
      secretName: sveltos-dashboard-tls
